Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106227

Alternate row background color does not starts from beginning

XMLWordPrintable

    • Windows
    • 16e0e7c779 (qt/qtbase/dev) 16e0e7c779 (qt/tqtc-qtbase/dev) aebfcbc556 (qt/qtbase/6.4) aebfcbc556 (qt/tqtc-qtbase/6.4) 11e70b7560 (qt/tqtc-qtbase/6.2) aebfcbc556 (qt/tqtc-qtbase/6.4.1) aebfcbc556 (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

      With QTreeWidget the alternating row colour background does not travel the entire length of the row. alternating row colour only begins at the first character of text which leaves large amounts of white space on the left hand side (particularly for trees which many levels of depth).

      See the attached screenshots to see the differences. Also small example. This used to work good with 5.3.1

        1. qt5158.PNG
          qt5158.PNG
          14 kB
        2. qt531.PNG
          qt531.PNG
          12 kB
        3. qtbug106227.zip
          4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: